--- a/examples/guardian-apply.yml
+++ b/examples/guardian-apply.yml
@@ -1,4 +1,4 @@
-name: 'Guardian Apply - Test'
+name: 'guardian_apply'
 run-name: 'Guardian Apply - PR #${{ github.event.pull_request.number }}'
 
 on:
@@ -25,3 +25,10 @@ jobs:
       wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
       wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
       guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
+
+      # Optional: only needed if a specific terraform version is required
+      # guardian_terraform_version: '1.3.8'
+
+    # Optional: GitHub token if needed using terraform github provider a custom PAT may be required depending on your use case
+    # secrets:
+    #   gh_token: '${{ secrets.GITHUB_TOKEN }}'
