--- a/examples/guardian-unlock.yml
+++ b/examples/guardian-unlock.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   unlock:
-    uses: 'abcxyz/guardian/.github/workflows/unlock.yml@main' # ratchet:exclude
+    uses: 'abcxyz/guardian/.github/workflows/unlock.yml@main' # TODO: pin this to the latest sha in the guardian repo
     with:
       wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
       wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
