Revert "testing merge queues (#21)"
This reverts commit 5e9069d8ebac3e0ea193f4449de756d16b32efa2.

--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -42,7 +42,7 @@ on:
       gh_token:
         required: false
 
-# only one workflow can be running at a time to allow for terraform state locking
+# only one workflow can run to allow for terraform state locking
 concurrency:
   group: '${{ github.workflow_ref }}'
 
